--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "./src/main.js",
 	"scripts": {
 		"test": "jest -i",
-		"dev": "nodemon ./src/main.js"
+		"dev": "nodemon ./src/main.js",
+		"generatedoc": "node ./src/docs/swagger.js"
 	},
 	"jest": {
 		"transform": {
@@ -22,6 +23,7 @@
 	"dependencies": {
 		"@prisma/client": "5.15.0",
 		"express": "^4.19.2",
+		"swagger-ui-express": "^5.0.1",
 		"winston": "^3.13.0"
 	},
 	"devDependencies": {
@@ -33,6 +35,7 @@
 		"jest": "^29.7.0",
 		"nodemon": "^3.1.3",
 		"prisma": "^5.15.0",
-		"supertest": "^7.0.0"
+		"supertest": "^7.0.0",
+		"swagger-autogen": "^2.23.7"
 	}
 }
